// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FrontPageByline renders with container style 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 5,
      },
      Object {
        "marginBottom": 100,
      },
      undefined,
    ]
  }
>
  <Text>
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "foo": "bar",
              },
            ],
          },
        ]
      }
      bylineStyle={
        Object {
          "lineHeight": 13,
        }
      }
    />
  </Text>
</View>
`;

exports[`FrontPageByline renders with keyline 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 5,
      },
      undefined,
      undefined,
    ]
  }
>
  <Text>
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "foo": "bar",
              },
            ],
          },
        ]
      }
      bylineStyle={
        Object {
          "lineHeight": 13,
        }
      }
    />
  </Text>
</View>
`;

exports[`FrontPageByline renders without keyline 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 5,
      },
      undefined,
      undefined,
    ]
  }
>
  <Text>
    <ArticleByline
      ast={
        Array [
          Object {
            "byline": Array [
              Object {
                "foo": "bar",
              },
            ],
          },
        ]
      }
      bylineStyle={
        Object {
          "lineHeight": 13,
        }
      }
    />
  </Text>
</View>
`;
